Convert backend to ES Modules

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "limozin",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "backend": "nodemon backend/server.js",
