--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.5.0",
     "moment": "^2.30.1",
     "next": "^15.3.3",
     "nodemon": "^3.1.10",
